--- a/cuepo.css
+++ b/cuepo.css
@@ -198,3 +198,24 @@ margin: 5% ;
     padding: 5%;
     
 }
+
+.skillsh1{
+ font-size: 24px;
+ text-align: center;
+}
+
+.habilitadesccs{
+    display: flex;
+}
+
+ul.skills li{
+    display: inline-block;
+    margin-right: 10px;
+    padding: 25px;
+    background-color: azure;
+    border-radius: 8px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    
+}
+
+
